[tool.poetry]
name = "prefect_docker"
version = "3.0.1"
description = "Workflow for metadata ingestion into Dataverse"
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
prefect = "^3.6.0"
python-dotenv = "^1.2.0"
boto3 = "^1.42.00"
dynaconf = "^3.2.0"
jmespath = "^1.0.1"
pydantic = "^2.11.0"
pydataverse = "^0.3.5"
openpyxl = "^3.1.5"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
